[gd_scene load_steps=4 format=3 uid="uid://dbom0jasgiob6"]

[ext_resource type="Script" uid="uid://d1jnkipekfns3" path="res://scripts/ghost.gd" id="1_blxur"]
[ext_resource type="PackedScene" uid="uid://oysop7pwekld" path="res://game/ghost_model_animation.tscn" id="2_io021"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b6vni"]
height = 3.0

[node name="ghost" type="CharacterBody3D"]
script = ExtResource("1_blxur")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.37709844, -0.08005732)
shape = SubResource("CapsuleShape3D_b6vni")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 1.5
path_max_distance = 3.01
avoidance_enabled = true
radius = 0.4
debug_enabled = true

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(15, 0, 0, 0, -6.556708e-07, -15, 0, 15, -6.556708e-07, 0, 0.57261574, 0)
visible = false
collision_mask = 131

[node name="RayCast3D2" type="RayCast3D" parent="."]
transform = Transform3D(14.095389, -5.1303015, 2.2425259e-07, 0, -6.556708e-07, -15, 5.1303015, 14.095389, -6.16129e-07, 0, 0.5732396, 0)
visible = false
collision_mask = 131

[node name="RayCast3D3" type="RayCast3D" parent="."]
transform = Transform3D(11.490666, -9.641813, 4.2145706e-07, 0, -6.556708e-07, -15, 9.641813, 11.490666, -5.02273e-07, 0, 0.5732396, 0)
visible = false
collision_mask = 131

[node name="RayCast3D4" type="RayCast3D" parent="."]
transform = Transform3D(14.095389, 5.1303015, -2.2425259e-07, 0, -6.556708e-07, -15, -5.1303015, 14.095389, -6.16129e-07, 0, 0.5732396, 0)
visible = false
collision_mask = 131

[node name="RayCast3D5" type="RayCast3D" parent="."]
transform = Transform3D(11.490666, 9.641813, -4.2145706e-07, 0, -6.556708e-07, -15, -9.641813, 11.490666, -5.02273e-07, 0, 0.5732396, 0)
visible = false
collision_mask = 131

[node name="ghost_model_animation" parent="." instance=ExtResource("2_io021")]
transform = Transform3D(-1.5, 0, -1.3113416e-07, 0, 1.5, 0, 1.3113416e-07, 0, -1.5, 0.026069656, -1.062, 0)

[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_velocity_computed"]
